fixed issue with footer font not showing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -107,7 +107,7 @@ footer {
 }
 
 .footer-text {
-    font-family: 'Oswald', serif;
+    font-family: 'Hammersmith', serif;
     font-size: 12pt;
     letter-spacing: .5px;
     color: #000
